--- a/Projektarbete/indexstyle.css
+++ b/Projektarbete/indexstyle.css
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Staatliches&family=Stardos+Stencil&display=swap");
 
 body,html {
-   height: 100%
-   
+   height: 100%;
+   overflow: hidden;
+   text-align: center;
 }
 
 *{
@@ -21,14 +22,29 @@ body,html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  filter: blur(2px);
 	
 }
 #bg-img .blur{
-    filter: blur(8px);
-    height: 300px;
-    width: 300px;
-    margin-left: 60px;
-    margin-top: 144px;
+	  background-image: url("legobakgrund.jpeg");
+    
+/* Full height */
+  height: 100vw;
+  width: auto;
+  overflow: hidden;
+  
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+  filter: blur(4px);
+  margin-left:20vw;
+  margin-right:20vw;
+  
+  
+  
+    
 	
 }
 .headernavbar {
@@ -58,4 +74,22 @@ body,html {
   flex-wrap: nowrap;
   list-style-type: none;
   justify-content: center;
+}
+
+#searchbar {
+	 position: absolute;
+	z-index: 4;
+   text-align: center;
+   
+   /* Borde kanske ha typ align itenms center?? eller text align center? får de inte att funka */
+   left: 40vw;		
+   top: 18vw;
+
+	
+}
+
+/* ska göra snyggare... */
+textarea {
+
+  resize: none;
 }
