--- a/Projektarbete/indexstyle.css
+++ b/Projektarbete/indexstyle.css
@@ -1,95 +1,89 @@
 @import url("https://fonts.googleapis.com/css2?family=Staatliches&family=Stardos+Stencil&display=swap");
-
-body,html {
-   height: 100%;
-   overflow: hidden;
-   text-align: center;
+body,
+html {
+    height: 100%;
+    overflow: hidden;
+    text-align: center;
 }
 
-*{
-	box-sizing: border-box;
+* {
+    box-sizing: border-box;
 }
+
 #bg-img {
-  background-image: url("legobakgrund.jpeg");
-  
+    background-image: url("legobakgrund.jpeg");
+    /* Full height */
+    height: 100vw;
+    width: auto;
+    overflow: hidden;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: blur(2px);
+}
 
-  /* Full height */
-  height: 100vw;
-  width: auto;
-  overflow: hidden;
-  
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  filter: blur(2px);
-	
+#bg-img .blur {
+    background-image: url("legobakgrund.jpeg");
+    /* Full height */
+    height: 100vw;
+    width: auto;
+    overflow: hidden;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: blur(3px);
+    margin-left: 20vw;
+    margin-right: 20vw;
 }
-#bg-img .blur{
-	  background-image: url("legobakgrund.jpeg");
-    
-/* Full height */
-  height: 100vw;
-  width: auto;
-  overflow: hidden;
-  
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  
-  filter: blur(4px);
-  margin-left:20vw;
-  margin-right:20vw;
-  
-  
-  
-    
-	
-}
+
 .headernavbar {
-  font-family: "Staatliches";
-  background-color: red;
-  overflow: hidden;
-  padding: 1vw;
-  border-bottom: yellow solid 1.5vw;
+    font-family: "Staatliches";
+    background-color: red;
+    overflow: hidden;
+    padding: 1vw;
+    border-bottom: yellow solid 1.5vw;
 }
+
 .headernavbar a {
-  color: black;
-  text-align: center;
-  padding: 14px 16px; /*scalar inte :/ kanske byt till vw om det ser snyggt ut*/
-  text-decoration: none;
-  font-size: 2vw;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    /*scalar inte :/ kanske byt till vw om det ser snyggt ut*/
+    text-decoration: none;
+    font-size: 2vw;
 }
+
 .headernavbar a:hover {
-  background-color: black;
-  color: white;
+    background-color: black;
+    color: white;
 }
+
 .headernavbar a:active {
-  background-color: gray;
-  color: white;
+    background-color: gray;
+    color: white;
 }
+
 #header {
-  display: flex;
-  flex-wrap: nowrap;
-  list-style-type: none;
-  justify-content: center;
+    display: flex;
+    flex-wrap: nowrap;
+    list-style-type: none;
+    justify-content: center;
 }
 
 #searchbar {
-	 position: absolute;
-	z-index: 4;
-   text-align: center;
-   
-   /* Borde kanske ha typ align itenms center?? eller text align center? får de inte att funka */
-   left: 40vw;		
-   top: 18vw;
-
-	
+    z-index: 4;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto;
+    margin-top: 10vw;
 }
 
-/* ska göra snyggare... */
-textarea {
 
-  resize: none;
+/* ska göra snyggare... */
+
+textarea {
+    resize: none;
 }
