--- a/Projektarbete/indexstyle.css
+++ b/Projektarbete/indexstyle.css
@@ -13,7 +13,7 @@ html {
 #bg-img {
     background-image: url("legobakgrund.jpeg");
     /* Full height */
-    height: 100vw;
+    height: 100%;
     width: auto;
     overflow: hidden;
     /* Center and scale the image nicely */
@@ -21,21 +21,6 @@ html {
     background-repeat: no-repeat;
     background-size: cover;
     filter: blur(2px);
-}
-
-#bg-img .blur {
-    background-image: url("legobakgrund.jpeg");
-    /* Full height */
-    height: 100vw;
-    width: auto;
-    overflow: hidden;
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: blur(3px);
-    margin-left: 20vw;
-    margin-right: 20vw;
 }
 
 .headernavbar {
@@ -65,6 +50,11 @@ html {
     color: white;
 }
 
+.headernavbar a.active {
+    background-color: gray;
+    color: white;
+}
+
 #header {
     display: flex;
     flex-wrap: nowrap;
@@ -72,18 +62,55 @@ html {
     justify-content: center;
 }
 
-#searchbar {
+.searchbar {
     z-index: 4;
     position: absolute;
     left: 0;
     right: 0;
     margin: auto;
-    margin-top: 10vw;
+    margin-top: 12vw;
 }
 
+form {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
 
-/* ska göra snyggare... */
+.searchbar button {
+    margin-left: -1vw;
+    width: 4vh;
+    height: 7vh;
+    background: red;
+    border: none;
+    cursor: pointer;
+    border-radius: 0px 4px 4px 0px;
+    background-image: url('search.png');
+    background-repeat: no-repeat;
+    background-position: center;
+}
 
-textarea {
-    resize: none;
+input {
+    flex-grow: 0;
+    border: none;
+}
+
+input:focus {
+    outline: none;
+}
+
+input[type=text] {
+    font-size: 1vw;
+    background-color: white;
+    background-image: url('LEGO_logo.svg.png');
+    background-position: 1vw;
+    background-size: 2vw 2vw;
+    background-repeat: no-repeat;
+    padding: 1.2vw 2vw 1.2vw 4vw;
+    outline: none;
+    border-radius: 4px;
+}
+
+input[type=text]:focus {
+    width: 30vw;
 }
