--- a/Projektarbete/indexstyle.css
+++ b/Projektarbete/indexstyle.css
@@ -8,6 +8,8 @@ html {
 
 * {
     box-sizing: border-box;
+    padding: 0%;
+    margin: 0%;
 }
 
 #bg-img {
@@ -34,7 +36,7 @@ html {
 .headernavbar a {
     color: black;
     text-align: center;
-    padding: 14px 16px;
+    padding: 1.4vw 1.6vw;
     /*scalar inte :/ kanske byt till vw om det ser snyggt ut*/
     text-decoration: none;
     font-size: 2vw;
