--- a/Projektarbete/indexstyle.css
+++ b/Projektarbete/indexstyle.css
@@ -119,3 +119,26 @@ input[type=text] {
 input[type=text]:focus {
     width: 30vw;
 }
+
+.help {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 30%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+  }
+.active, .help:hover {
+    background-color: #ccc;
+  }
+
+  .panel {
+    padding: 0 18px;
+    background-color: white;
+    display: none;
+    overflow: hidden;
+  }
+  
