--- a/Projektarbete_10_Dec_2021/indexstyle.css
+++ b/Projektarbete_10_Dec_2021/indexstyle.css
@@ -64,7 +64,7 @@ html {
 }
 
 .headernavbar img {
-  transform: rotate(40deg);
+  transform: rotate(45deg);
 }
 
 .searchbar {
@@ -158,7 +158,11 @@ input[type="text"]:focus {
   transition: max-height 0.5s ease-out;
   border-radius: 0px 0px 3px 3px;
   margin-top: 3.5vw;
-  font-size: 0.9vw;
+  font-size: 1vw;
+}
+
+.panelOpen {
+  max-height: 370px; /*Transtion fungerar inte om man använder fit-content*/
 }
 
 .accordion:after {
