--- a/Projekt 21-12-10/Projektarbete/search_result_style.css
+++ b/Projekt 21-12-10/Projektarbete/search_result_style.css
@@ -2,7 +2,7 @@
 body{
 	  background-image: url("legobakgrundblurrad.png");
      /* Full height */
-     height: 100%;
+     height: auto;
      width: auto;
      /* Center and scale the image nicely */
      background-position: center;
