--- a/Projekt 21-12-10/Projektarbete/indexstyle.css
+++ b/Projekt 21-12-10/Projektarbete/indexstyle.css
@@ -107,7 +107,7 @@ input:focus {
   flex-grow: 20%;
 }
 
-input[type="text"] {
+input[type="search"] {
   font-size: 1vw;
   background-color: white;
   background-image: url("LEGO_logo.svg.png");
@@ -119,7 +119,7 @@ input[type="text"] {
   border-radius: 4px;
 }
 
-input[type="text"]:focus {
+input[type="search"]:focus {
   transition: all 1s;
   flex-grow: 0.1;
   flex-basis: auto;
@@ -153,12 +153,14 @@ input[type="text"]:focus {
   width: 15vw;
   padding: 0 2vh;
   background-color: white;
-  max-height: 0px;
+  max-height: 0;
   overflow: hidden;
   transition: max-height 0.5s ease-out;
   border-radius: 0px 0px 3px 3px;
   margin-top: 3.5vw;
   font-size: 1vw;
+}
+.panelOpen{
 }
 
 .accordion:after {
