--- a/Projekt 21-12-10/Projektarbete/indexstyle.css
+++ b/Projekt 21-12-10/Projektarbete/indexstyle.css
@@ -153,14 +153,12 @@ input[type="search"]:focus {
   width: 15vw;
   padding: 0 2vh;
   background-color: white;
-  max-height: 0;
+  max-height: 0px;
   overflow: hidden;
   transition: max-height 0.5s ease-out;
   border-radius: 0px 0px 3px 3px;
   margin-top: 3.5vw;
   font-size: 1vw;
-}
-.panelOpen{
 }
 
 .accordion:after {
