--- a/Projekt 21-12-10/Projektarbete/aboutus_style.css
+++ b/Projekt 21-12-10/Projektarbete/aboutus_style.css
@@ -8,18 +8,18 @@ body {
 html {
   box-sizing: border-box;
 }
-
-*, *:before, *:after {
+/*
+*,
+*:before,
+*:after {
   box-sizing: inherit;
-}
+}*/
 
 .column {
   float: right;
   width: 20%;
   margin-bottom: 16px;
   padding: 200px 20px 10px;
-  
-  
 }
 
 .card {
@@ -34,24 +34,26 @@ html {
 .about-section {
   padding: 50px;
   text-align: center;
-     background-image: url("legobakgrundblurrad.png");
-     /* Full height */
-     height: 100%;
-     width: auto;
-     overflow: hidden;
-     /* Center and scale the image nicely */
-     background-position: center;
-     background-repeat: no-repeat;
-     background-size: cover;
-   
-     z-index: 1;
+  background-image: url("legobakgrundblurrad.png");
+  /* Full height */
+  height: 100%;
+  width: auto;
+  overflow: hidden;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: blur(2px);
+
+  z-index: 1;
 }
 
 .container {
   padding: 0 16px;
 }
 
-.container::after, .row::after {
+.container::after,
+.row::after {
   content: "";
   clear: both;
   display: table;
@@ -84,63 +86,64 @@ html {
   }
 }
 
+.headernavbar {
+  font-family: "Staatliches";
+  background-color: red;
+  overflow: hidden;
+  padding: 1vw;
+  border-bottom: yellow solid 1.5vw;
+  margin-left: -5vw;
+}
 
- .headernavbar {
-     font-family: "Staatliches";
-     background-color: red;
-     overflow: hidden;
-     padding: 1vw;
-     border-bottom: yellow solid 1.5vw;
-     margin-left: -5vw;
- }
- 
- .headernavbar a {
-     color: white;
-     text-align: center;
-     margin: 6vw;
-     /*scalar inte :/ kanske byt till vw om det ser snyggt ut*/
-     text-decoration: none;
-     font-size: 3vw;
- }
- 
- .headernavbar :hover {
-     color: black;
- }
- 
- .headernavbar .text:active {
-     color: black;
- }
- 
- .headernavbar .text:active {
-     color: black;
- }
- 
- #header {
-     display: flex;
-     flex-wrap: nowrap;
-     list-style-type: none;
-     justify-content: center;
- }
- 
- .headernavbar img {
-     transform: rotate(40deg);
- }
- 
-  #bg-img {
-     background-image: url("legobakgrund.jpeg");
-     /* Full height */
-     height: 100%;
-     width: auto;
-     overflow: hidden;
-     /* Center and scale the image nicely */
-     background-position: center;
-     background-repeat: no-repeat;
-     background-size: cover;
-     filter: blur(2px);
-     z-index: 1;
- }
+.headernavbar a {
+  color: white;
+  text-align: center;
+  margin: 6vw;
+  /*scalar inte :/ kanske byt till vw om det ser snyggt ut*/
+  text-decoration: none;
+  font-size: 3vw;
+}
 
- * {box-sizing: border-box;}
+.headernavbar :hover {
+  color: black;
+}
+
+.headernavbar .text:active {
+  color: black;
+}
+
+.headernavbar .text:active {
+  color: black;
+}
+
+#header {
+  display: flex;
+  flex-wrap: nowrap;
+  list-style-type: none;
+  justify-content: center;
+}
+
+.headernavbar img {
+  transform: rotate(40deg);
+}
+
+#bg-img {
+  background-image: url("legobakgrund.jpeg");
+  /* Full height */
+  height: 100%;
+  width: auto;
+  overflow: hidden;
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: blur(2px);
+  z-index: 1;
+}
+
+* {
+  box-sizing: border-box;
+}
 
 .container {
   position: relative;
@@ -154,18 +157,17 @@ html {
   width: 150px;
   border-radius: 50%;
   border: 6px solid;
-  
 }
 
 .overlay {
-  position: absolute; 
-  bottom: 0; 
+  position: absolute;
+  bottom: 0;
   background: rgb(0, 0, 0);
   background: rgba(0, 0, 0, 0.5); /* Black see-through */
-  color: #f1f1f1; 
+  color: #f1f1f1;
   width: 100%;
-  transition: .5s ease;
-  opacity:0;
+  transition: 0.5s ease;
+  opacity: 0;
   color: white;
   font-size: 20px;
   padding: 20px;
@@ -176,8 +178,34 @@ html {
   opacity: 1;
 }
 
-h2{
-	background-color: red;
-	border-radius: 50%;
+h2 {
+  background-color: red;
+  border-radius: 50%;
   border: 6px solid black;
+}
+/*
+//////////////////////////////////////////////////////////////////////////////////////////////////////
+*/
+.flex-container {
+  /* We first create a flex layout context */
+  display: flex;
+
+  flex-flow: row wrap;
+
+  justify-content: space-around;
+
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.flex-item {
+  background: tomato;
+  padding: 5px;
+  margin-top: 10px;
+  line-height: 150px;
+  color: white;
+  font-weight: bold;
+  font-size: 1em;
+  text-align: center;
 }
