--- a/Projektarbete/search_result_style.css
+++ b/Projektarbete/search_result_style.css
@@ -12,15 +12,15 @@ body, html{
      z-index: 1;
 	
 	 
-	 
 }
 * {
      box-sizing: border-box;
      padding: 0%;
      margin: 0%;
+	 font-family: "Staatliches";
+	 font-weight: lighter;
  }
  .headernavbar {
-     font-family: "Staatliches";
      background-color: red;
      overflow: hidden;
      padding: 1vw;
@@ -74,6 +74,7 @@ body, html{
 	 text-align: center; 
 	 margin-left: auto;
 	 margin-right: auto;
+	 font-size: 1.4vw;
  }
 table, th, td {
 	border-radius: 0.5vw;
@@ -83,18 +84,27 @@ table, th, td {
 td {
 	border: 1px dotted black;
 	padding: 10px;
+	padding-left: 2vw;
+	padding-right: 2vw;
 }
 th {
 	padding: 10px;
+}
+table a{
+	color: black;
+	text-decoration: none;
+}
+table a:hover{
+	color: red;
+	text-decoration: underline;
 }
 h1{
 	text-align: center;
 	color: white;
      text-align: center;
      margin: 1vw;
-     /*scalar inte :/ kanske byt till vw om det ser snyggt ut*/
      text-decoration: none;
-     font-size: 100%;
+     font-size: 1.4vw;
 }
 
 
@@ -160,30 +170,49 @@ input[type="search"]:focus {
 	display: flex;
 	flex-wrap: nowrap;
 	justify-content: center;
-	font-size: 1vw;
 	margin-top: 1vw;
+	margin-bottom: 1vw;
+}
+#firstpage {
+	background-color: red;
+}
+#prevpage {
+	background-color: yellow;
+}
+#nextpage {
+	background-color: lightgreen;
+}
+#lastpage {
+	background-color: lightblue;
 }
 .pages button{
 	border: none;
-	color: black;
-	padding: 0.5vw;
-	background-color: white;
+	padding: .5vw;
 	text-decoration: none;
+	font-size: 1.2vw;
 }
 .pages button:hover{
-	background-color:gray;
-	color: white;
+	border: .5vw solid black;
+	color: darkgray;
 }
+
 .pages button:active{
 	color: black;
 }
+#prevpage button:hover {
+	color: red;
+}
+
 
 /* Style the buttons that are used to open and close the accordion panel */
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 700px) {
 
    body { 
       font-size: 1em; 
+   }
+   h1{
+	font-size: 1.7em;   
    }
 	
 	 .headernavbar {
@@ -199,10 +228,8 @@ input[type="search"]:focus {
      color: white;
      text-align: center;
      margin: 6vw;
-     /*scalar inte :/ kanske byt till vw om det ser snyggt ut*/
      text-decoration: none;
-     font-size: 8vw;
-	 
+     font-size: 3.4em;
  }
  
  .headernavbar img {
@@ -211,11 +238,25 @@ input[type="search"]:focus {
 	 height: 8vw;
  }
  .searchbar {
-  z-index: 4;
-  position: relative;
-  left: 0;
-  right: 0;
-  margin: auto;
   margin-top: 10vw;
+}
+ table {
+     border-spacing: 2vw;
+	 font-size: 1.8em;
+ }
+table, th, td {
+	border-radius: 0.5vw;
+}
+td {
+	border: 1px dotted black;
+	padding: 10px;
+	padding-left: 2vw;
+	padding-right: 2vw;
+}
+th {
+	padding: 10px;
+}
+.pages button{
+	font-size: 4vw;
 }
 }
